* 2014-10-09 - steffen.templin@open-xchange.com

 - Fix for bug 34850: Find API now returns user input as is, i.e. clients must not interpret it as HTML.

* 2014-10-09 - marcus.klein@open-xchange.com

 - Fix for bug 34846: Marked guard.properties as configuration file.

* 2014-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 34812: Restored required "read_stream" permission when initializing a new Facebook OAuth account,
                      which is basically a revert for commit 145a880b7557d89754b509deeef34c4bcc1a84d5 (bug 34281)
 - Fix for bug 34727: Set proper full-name to Unified Mail subfolders
 - Fix for bug 34835: Honor "CREATE-SPECIAL-USE" capability string when using the "USE" IMAP CREATE command extension
 - Fix for bug 34702: Use a white-listed set of parameters to consider when generating thumbnail's cache key

* 2014-10-07 - steffen.templin@open-xchange.com

 - Fix for bug 26354: Set user attributes without explicit database locking to avoid deadlocks.

* 2014-10-06 - jan.bauerdick@open-xchange.com

 - Fix for bug 34722: Removed foreign keys from mailaccount create table task

* 2014-10-06 - thorben.betten@open-xchange.com

 - Fix for bug 34748: Added appropriate null guard prior to cleansing from session cache
 - Fix for bug 34741: Improved description for the quota properties
 - Fix for bug 34706: Use timeout-aware operations to distribute either change of local IP address, client identifier or hash string through cluster to prevent the system from
                      increasing number of stalled threads
 - Fix for bug 34765: Use secure value insertion through PreparedStatement

* 2014-10-06 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34704: Parse the escaped double quotes correctly and convert all octet string literals to their ASCII/Unicode representations

* 2014-10-02 - thorben.betten@open-xchange.com

 - Fix for bug 34608: Cleanse "unified-mail enabled" information from session parameters